YAMLs/statefulset.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql
  
  labels:
    app: wordpress

spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
      targetPort: 3306

  selector:
    app: wordpress
    tier: mysql
  
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet

metadata:
  
  name: mysql
  labels:
    app: wordpress

spec:
  serviceName: mysql
  replicas: 2
  
  selector:
    
    matchLabels:
      app: wordpress
      tier: mysql
  
  template:
    
    metadata:
      
      labels:
        app: wordpress
        tier: mysql
    
    spec:
      terminationGracePeriodSeconds: 10
      
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      
      containers:
      - name: mysql
        image: mysql:5.6
        
        ports:
        - containerPort: 3306
          name: mysql
        
        resources:
          limits:
            cpu: 750m
          requests:
            cpu: 120m
        
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
