YAMLs/wp-deployment.yaml
apiVersion: v1
kind: Service

metadata:
  
  name: wordpress
  labels:
    app: wordpress

spec:
  
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 80
  
  selector:
    app: wordpress
    tier: frontend
  
  clusterIP: None

---

apiVersion: apps/v1
kind: Deployment

metadata:
  
  name: wordpress
  labels:
    app: wordpress

spec:
  
  replicas: 2
  
  selector:
    
    matchLabels:
      app: wordpress
      tier: frontend
  
  template:
    
    metadata:
      
      labels:
        app: wordpress
        tier: frontend
    
    spec:
      
      terminationGracePeriodSeconds: 10
      
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      
      containers:
      - name: wordpress
        image: wordpress:4.8-apache
        
        ports:
        - containerPort: 80
          name: wordpress
        
        resources:
          limits:
            cpu: 750m
          requests:
            cpu: 120m
        
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
